debug-scenario/01_deploy_nsxdemo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debug-nginx
  namespace: debug
  labels:
    app: debug-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: debug-nginx
  template:
    metadata:
      labels:
        app: debug-nginx
    spec:
      containers:
      - name: debug-nginx
        image: ytsuboi/debug-nginx 
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 2
          failureThreshold: 2
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx
          readOnly: true
        - mountPath: /etc/nginx/ssl
          name: nginx-ssl
      volumes:
      - name: nginx
        configMap:
          name: nginx
      - name: nginx-ssl
        secret:
          secretName: nginx-ssl
