debug-scenario/02_service_nsxdemo.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: debug
  name: demo-service
  labels:
    app: debug-nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    app: debug-nginx
