debug-scenario/04_servicelb_nsxdemo.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: debug
  name: lb-debug-nginx
  labels:
    app: debug-nginx  
spec:
  ports:
    - port: 8443
      targetPort: 443
      protocol: TCP
  selector:
    app: debug-nginx  
  type: LoadBalancer
